@@ -20,9 +20,11 @@ For 5.0
         TODO: Add documentation for ALERT:Title|Info syntax
         TODO: Add documentation about Uniform Type Identifiers
         TODO: Add documentation on reading dropped text from STDIN
+        TODO: Finish updating text and formatting in Readme file
     TODO: Resizable or at least larger Progress Bar window
     TODO: Long GNU named params for command line tool, e.g. --some-option
 
+    * Integrated CFBundleVersion increment script into build process
     * Updated keys in information property lists
     * Added ALERT: example
     * Added authenticated execution example
